<resources>
    <string name="app_name">Carimba</string>
    <string name="title">Carimba</string>
    <string name="subtitle">Teilen Sie Ihre Erfahrungen</string>
    <string name="login">Einloggen</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="signUpRequest">Sie haben noch keinen Account?</string>
    <string name="signUp">Registrieren</string>
    <string name="pwReq">Min. 6 Zeichen</string>
    <string name="carsTitle">Meine Autos</string>
    <string name="carsAdd">Hinzufügen</string>
    <string name="carAddTitle">Auto hinzufügen</string>
    <string name="carAddYear">Baujahr</string>
    <string name="carAddMake">Marke</string>
    <string name="carAddModel">Modell</string>
    <string name="carAddTrim">Version</string>
    <string name="carAddFinished">Fertig</string>
    <string name="carModifications">Modifikationen</string>
    <string name="addMod">Modifikation hinzufügen</string>
    <string name="addModCategory">Kategorie</string>
    <string name="addModTitle">Titel</string>
    <string name="addModDetails">Details, Erfahrungen, etc</string>
    <string name="addModPhoto">Foto</string>
    <string name="addModTakePhoto">Foto aufnehmen</string>
    <string name="addModFinished">Fertig</string>
    <string name="modModificatino">Modifikation</string>
    <string name="modDetails">Details, Erfahrungen, etc</string>
    <string name="modPhoto">Foto</string>
    <string name="takePhoto">Foto aufnehmen</string>
    <string name="fromGallery">Aus der Gallerie</string>
    <string name="cancel">Abbrechen</string>
    <string name="logout">Logout</string>
    <string name="search">Suchen</string>
    <string name="galleryNotSupported">Fotos können noch nicht von der Gallerie importiert werden, da die Performance zu langsam wäre.</string>
    <string name="searchNotSupported">Die Suchfunktion wird noch nicht unterstützt.</string>




    <string name="ENGINE">Motor</string>
    <string name="EXHAUST">Auspuff</string>
    <string name="WHEELS">Räder</string>
    <string name="SUSPENSION">Fahrwerk</string>
    <string name="BODY_WORK">Karosserie</string>
    <string name="INTERIOR">Interieur</string>
    <string name="SOUND">Sound</string>

</resources>
