...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddCarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
        app:titleTextColor="@color/white" />

...
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <TextView
            android:id="@+id/tvCarsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carAddTitle"
            android:textSize="24sp" />

        <Space
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carAddYear"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/ddCarYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
...
        <TextView
            android:id="@+id/tvCarAddMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carAddMake" />
        <Spinner
            android:id="@+id/ddCarMake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
...
        <TextView
            android:id="@+id/tvCarAddModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carAddModel" />
        <Spinner
            android:id="@+id/ddCarModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
...
            android:id="@+id/tvCarAddTrim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carAddTrim" />

        <EditText
            android:id="@+id/tiCarAddTrim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnCarAddFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:paddingHorizontal="10dp"
            android:text="@string/carAddFinished"
            android:textColor="@color/white" />
...
