...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvAddMod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addMod"
            android:textSize="20sp" />

        <Space
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/ddAddModCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tiAddModTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tiAddModDetails"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnAddModFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:paddingHorizontal="10dp"
                android:text="@string/addModFinished"
                android:textColor="@color/white" />
...
